physics flappy bird

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<meta name="msapplication-tap-highlight" content="no"/>
 		<link rel="apple-touch-icon-precomposed" href="data/apple-touch-icon.png"/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Sample</title>
-		<canvas  id="canvas" width="400" height="400"></canvas>
+		<title>Flappy bird</title>
+		<canvas  id="canvas" width="800" height="400"></canvas>
 		<div id="info">
-			<div id="speed"></div>
-			<div id="result"></div>
-			<div id="topResult"></div>
+			<div id="score"></div>
+			<div id="record"></div>
 		</div>
+
 		<script src="player.js"></script>
 	</head>
 	<body>  
